--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
         </ol>
         <p class="p-box">
           You can now continue with the
-          <a href="https://3ds.hacks.guide/finalizing-setup">Finalizing Setup</a>
+          <a href="https://3ds.hacks.guide/finalizing-setup">Finalizing Setup</a><br>Once completed, you can launch
+          Frogminer
+          from Homebrew Launcher and select "RESTORE clean DS Download Play" to restore Download Play functionality
         </p>
         <hr>
         <h2>Credits</h2>
