--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
           <li>Download the frogminer_beta <a class="a-table" target="_blank" href="magnet:?xt=urn:btih:3c6e002544971f3b17cddda142577ad2d286deb8&dn=FROGminer_BETA.zip&tr=udp%3a%2f%2fexplodie.org%3a6969%2fannounce&tr=udp%3a%2f%2fopen.demonii.si%3a1337%2fannounce&tr=udp%3a%2f%2fretracker.lanta-net.ru%3a2710%2fannounce&tr=udp%3a%2f%2ftracker.mg64.net%3a6969%2fannounce&tr=udp%3a%2f%2fbt.xxx-tracker.com%3a2710%2fannounce&tr=udp%3a%2f%2fexodus.desync.com%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.cypherpunks.ru%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.coppersurfer.tk%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.vanitycore.co%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.port443.xyz%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.torrent.eu.org%3a451%2fannounce&tr=udp%3a%2f%2ftracker.internetwarriors.net%3a1337%2fannounce&tr=udp%3a%2f%2fpublic.popcorn-tracker.org%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.tiny-vps.com%3a6969%2fannounce&tr=udp%3a%2f%2fthetracker.org%3a80%2fannounce&tr=udp%3a%2f%2fipv4.tracker.harry.lu%3a80%2fannounce&tr=udp%3a%2f%2fmgtracker.org%3a6969%2fannounce&tr=udp%3a%2f%2ftracker4.itzmx.com%3a2710%2fannounce&tr=udp%3a%2f%2ftracker.opentrackr.org%3a1337%2fannounce&tr=udp%3a%2f%2f9.rarbg.to%3a2710%2fannounce">here</a></li>
           <li>Copy <code>boot.firm</code> from the Luma3DS 7z archive to the root of your SD Card</li>
           <li>Copy <code>boot.nds</code> from b9sTool archive to the root of your SD Card</li>
-          <li>Copy <code>Frogtool.3dsx</code> from frogminer_beta.zip to the <code>3ds</code> folder</li>
-          <li>Copy the <code>private</code> folder from frogminer_beta.zip to the root of your SD Card</li>
+          <li>Copy <code>Frogtool.3dsx</code> from <code>frogminer_beta.zip</code> to the <code>3ds</code> folder</li>
+          <li>Copy the <code>private</code> folder from <code>frogminer_beta.zip</code> to the root of your SD Card</li>
         </ol>
         <hr>
         <h2 id="Section_II">Section II: Exporting DS download play and injecting JPN Flipnote Studio</h2>
@@ -82,17 +82,16 @@
           <li>Launch Frogtool.3dsx from the Homebrew Launcher</li>
           <li>Select "IMPORT patched DS Download Play"</li>
           <li>Tap the touch screen to continue, then select "Boot patched DS Download Play"</li>
-          <li>Tap "Nintendo DS" in Download Play to launch Japanese flipnote studio</li>
           <li>Complete the initial setup by choosing the left option when applicable until you reach this screen</li>
           <img src="https://i.imgur.com/hpiwWZR.png" style="padding:10px;">
-          <li>Tap the left box, then Tap the box with the SD Card icon</li>
+          <li>Tap the left large box, then Tap the box with the SD Card icon</li>
           <li>Tap the face, then Tap the bottom right button to continue</li>
           <li>Tap the bottom left button then Tap the second button on top with the Film icon</li>
-          <li>Tap the arrow to scroll and highlight frame 3/3</li>
+          <li>Use the touch screen to scroll and highlight frame 3/3 on the film reel</li>
           <li>Tap the third box with the letter A, scroll back to frame 1/3 then Tap the fourth box with the letter A.
             This should launch b9sTool</li>
           <li>Select "Install boot9strap" and confirm with START & SELECT</li>
-          <li>Wait for it to say "Done!"" Exit b9sTool and power off your 3DS</li>
+          <li>Wait for it to say "Done!" Exit b9sTool and power off your 3DS</li>
           <ul>
             <li>You may need to force power off by holding the power button</li>
           </ul>
@@ -107,7 +106,8 @@
         </ol>
         <p class="p-box">
           You can now continue with the
-          <a href="https://3ds.hacks.guide/finalizing-setup">Finalizing Setup</a><br>Once completed, you can launch
+          <a href="https://3ds.hacks.guide/finalizing-setup" target="_blank">Finalizing Setup</a><br>Once completed,
+          you can launch
           Frogminer
           from Homebrew Launcher and select "RESTORE clean DS Download Play" to restore Download Play functionality
         </p>
@@ -115,12 +115,11 @@
         <h2>Credits</h2>
         <ul>
           <li>zoogie - frogminer, seedminer, b9stool</li>
-          <li>Martin Korth (nocash) - location hints for flipnote privkeys, no$gba, excellent Gbatek docs. I could go
-            on.</li>
-          <li>Shutterbug2000 - ugopwn exploit. brilliant stuff!</li>
+          <li>Martin Korth (nocash) - location hints for flipnote privkeys, no$gba, Gbatek docs</li>
+          <li>Shutterbug2000 - ugopwn exploit</li>
           <li>Fincs and Wintermute - Flipnote Lenny, a revised version of ugopwn</li>
           <li>zacchi4k and Chromaryu - tool assistance</li>
-          <li>eip - original guide owner</li>
+          <li>eip - original guide</li>
           <li>Kuma - revision 2 of eips guide and proofreading</li>
           <li>Jisagi - implementation and design</li>
         </ul>
