--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <h2>What will I need to do before I begin?</h2>
         <p>
           Before you are able to use Frogminer you will need to complete the Steelminer Guide located <a class="a-table"
-            target="_blank" href="http://steelminer.jisagi.net/">here.</a> You also will need to download a torrent
-          client such as <a class="a-table" target="_blank" href="https://deluge-torrent.org/">deluge.</a>
+            target="_blank" href="http://steelminer.jisagi.net/">here.</a>
         </p>
         <hr>
         <h3>Sections</h3>
@@ -50,7 +49,7 @@
           <li>Insert your 3DS SD card into your PC</li>
           <li>Download the latest version of Luma3DS <a class="a-table" target="_blank" href="https://github.com/AuroraWright/Luma3DS/releases/latest/">here</a></li>
           <li>Download the latest version of b9sTool <a class="a-table" target="_blank" href="https://github.com/zoogie/b9sTool/releases/latest/">here</a></li>
-          <li>Download the frogminer_beta <a class="a-table" target="_blank" href="magnet:?xt=urn:btih:3c6e002544971f3b17cddda142577ad2d286deb8&dn=FROGminer_BETA.zip&tr=udp%3a%2f%2fexplodie.org%3a6969%2fannounce&tr=udp%3a%2f%2fopen.demonii.si%3a1337%2fannounce&tr=udp%3a%2f%2fretracker.lanta-net.ru%3a2710%2fannounce&tr=udp%3a%2f%2ftracker.mg64.net%3a6969%2fannounce&tr=udp%3a%2f%2fbt.xxx-tracker.com%3a2710%2fannounce&tr=udp%3a%2f%2fexodus.desync.com%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.cypherpunks.ru%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.coppersurfer.tk%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.vanitycore.co%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.port443.xyz%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.torrent.eu.org%3a451%2fannounce&tr=udp%3a%2f%2ftracker.internetwarriors.net%3a1337%2fannounce&tr=udp%3a%2f%2fpublic.popcorn-tracker.org%3a6969%2fannounce&tr=udp%3a%2f%2ftracker.tiny-vps.com%3a6969%2fannounce&tr=udp%3a%2f%2fthetracker.org%3a80%2fannounce&tr=udp%3a%2f%2fipv4.tracker.harry.lu%3a80%2fannounce&tr=udp%3a%2f%2fmgtracker.org%3a6969%2fannounce&tr=udp%3a%2f%2ftracker4.itzmx.com%3a2710%2fannounce&tr=udp%3a%2f%2ftracker.opentrackr.org%3a1337%2fannounce&tr=udp%3a%2f%2f9.rarbg.to%3a2710%2fannounce">here</a></li>
+          <li>Download the frogminer_beta <a class="a-table" target="_blank" href="./public/data/FROGminer_BETA.zip">here</a></li>
           <li>Copy <code>boot.firm</code> from the Luma3DS 7z archive to the root of your SD Card</li>
           <li>Copy <code>boot.nds</code> from b9sTool archive to the root of your SD Card</li>
           <li>Copy <code>Frogtool.3dsx</code> from <code>frogminer_beta.zip</code> to the <code>3ds</code> folder</li>
