Added keeping movable.sed and made jenkins instructions more clear  (#2)
* Added keeping movable.sed and made jenkins instructions more clear

Apprently jenkins let's you build a file even if you don't upload a movable.sed and a lot of people are doing that
Idk if I did the bulletpoints correctly so pls check ;-;

* Update index.html

* Update index.html

* Update index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>What will I need to do before I begin?</h2>
         <p>
           Before you are able to use Frogminer you will need to complete the Steelminer Guide located <a class="a-table"
-            target="_blank" href="http://steelminer.jisagi.net/">here.</a>
+            target="_blank" href="http://steelminer.jisagi.net/">here.</a> Keep your <code>movable.sed</code> file, you will need it for this guide.
         </p>
         <hr>
         <h3>Sections</h3>
@@ -65,8 +65,11 @@
           <li>Copy <code>484E4441.bin</code> from the root of your SD Card to somewhere you can remember (for example
             your desktop)</li>
           <li>Open <a class="a-table" target="_blank" href="https://jenkins.nelthorya.net/job/DSIHaxInjector/build">this
-              website</a> and input the info required in the corresponding fields (inputting an email is not required).
-            Use the <code>484E4441.bin</code> file for DSiBin field</li>
+              website</a> and input the info required in the corresponding fields (inputting an email is not required)</li>
+          <ul>
+            <li>Upload the <code>484E4441.bin</code> file to the DSiBin field</li>
+            <li>Upload the <code>movable.sed</code> you used for steelminer to the MovableSed field</li>
+            </ul>
           <li>Press "Build" and wait a bit for the process to complete</li>
           <li>Under build history search your username and click on the latest build</li>
           <li>Download <code>484E4441.bin.patched_username</code> with <strong>your</strong> username on it. If it is
@@ -87,7 +90,7 @@
           <li>Tap the face, then Tap the bottom right button to continue</li>
           <li>Tap the bottom left button then Tap the second button on top with the Film icon</li>
           <li>Use the touch screen to scroll and highlight frame 3/3 on the film reel</li>
-          <li>Tap the third box with the letter A, scroll back to frame 1/3 then Tap the fourth box with the letter A.
+          <li>Tap the third box with the letter A, scroll back and tap frame 1/3, then Tap the fourth box with the letter A.
             This should launch b9sTool</li>
           <li>Select "Install boot9strap" and confirm with START & SELECT</li>
           <li>Wait for it to say "Done!" Exit b9sTool and power off your 3DS</li>
