frogminer release link added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
         <h2>What will I need to do before I begin?</h2>
         <p>
           Before you are able to use Frogminer you will need to complete the Steelminer Guide located <a class="a-table"
-            target="_blank" href="http://steelminer.jisagi.net/">here.</a> Keep your <code>movable.sed</code> file, you will need it for this guide.
+            target="_blank" href="http://steelminer.jisagi.net/">here.</a> Keep your <code>movable.sed</code> file, you
+          will need it for this guide.
         </p>
         <hr>
         <h3>Sections</h3>
@@ -49,11 +50,11 @@
           <li>Insert your 3DS SD card into your PC</li>
           <li>Download the latest version of Luma3DS <a class="a-table" target="_blank" href="https://github.com/AuroraWright/Luma3DS/releases/latest/">here</a></li>
           <li>Download the latest version of b9sTool <a class="a-table" target="_blank" href="https://github.com/zoogie/b9sTool/releases/latest/">here</a></li>
-          <li>Download the frogminer_beta <a class="a-table" target="_blank" href="./public/data/FROGminer_BETA.zip">here</a></li>
+          <li>Download the <code>RELEASE.zip</code> <a class="a-table" target="_blank" href="https://github.com/zoogie/Frogtool/releases/latest">here</a></li>
           <li>Copy <code>boot.firm</code> from the Luma3DS 7z archive to the root of your SD Card</li>
           <li>Copy <code>boot.nds</code> from b9sTool archive to the root of your SD Card</li>
-          <li>Copy <code>Frogtool.3dsx</code> from <code>frogminer_beta.zip</code> to the <code>3ds</code> folder</li>
-          <li>Copy the <code>private</code> folder from <code>frogminer_beta.zip</code> to the root of your SD Card</li>
+          <li>Copy <code>Frogtool.3dsx</code> from <code>RELEASE.zip</code> to the <code>3ds</code> folder</li>
+          <li>Copy the <code>private</code> folder from <code>RELEASE.zip</code> to the root of your SD Card</li>
         </ol>
         <hr>
         <h2 id="Section_II">Section II: Exporting DS download play and injecting JPN Flipnote Studio</h2>
@@ -69,7 +70,7 @@
           <ul>
             <li>Upload the <code>484E4441.bin</code> file to the DSiBin field</li>
             <li>Upload the <code>movable.sed</code> you used for steelminer to the MovableSed field</li>
-            </ul>
+          </ul>
           <li>Press "Build" and wait a bit for the process to complete</li>
           <li>Under build history search your username and click on the latest build</li>
           <li>Download <code>484E4441.bin.patched_username</code> with <strong>your</strong> username on it. If it is
@@ -90,7 +91,8 @@
           <li>Tap the face, then Tap the bottom right button to continue</li>
           <li>Tap the bottom left button then Tap the second button on top with the Film icon</li>
           <li>Use the touch screen to scroll and highlight frame 3/3 on the film reel</li>
-          <li>Tap the third box with the letter A, scroll back and tap frame 1/3, then Tap the fourth box with the letter A.
+          <li>Tap the third box with the letter A, scroll back and tap frame 1/3, then Tap the fourth box with the
+            letter A.
             This should launch b9sTool</li>
           <li>Select "Install boot9strap" and confirm with START & SELECT</li>
           <li>Wait for it to say "Done!" Exit b9sTool and power off your 3DS</li>
