Just some text cleanup and instructions clear up (#3)
* Update index.html

* Update index.html

* Update index.html

--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
           <li>Tap the touch screen to continue, then select "Boot patched DS Download Play"</li>
           <li>Complete the initial setup by choosing the left option when applicable until you reach this screen</li>
           <img src="https://i.imgur.com/hpiwWZR.png" style="padding:10px;">
-          <li>Tap the left large box, then Tap the box with the SD Card icon</li>
-          <li>Tap the face, then Tap the bottom right button to continue</li>
-          <li>Tap the bottom left button then Tap the second button on top with the Film icon</li>
+          <li>Tap the left large box, then tap the box with the SD Card icon</li>
+          <li>Tap the face, then tap the bottom right button to continue</li>
+          <li>Tap the frog icon on the bottom left then tap the second button on top with the film icon</li>
           <li>Use the touch screen to scroll and highlight frame 3/3 on the film reel</li>
-          <li>Tap the third box with the letter A, scroll back and tap frame 1/3, then Tap the fourth box with the
+          <li>Tap the third box with the letter A, scroll back and tap frame 1/3, then tap the fourth box with the
             letter A.
             This should launch b9sTool</li>
           <li>Select "Install boot9strap" and confirm with START & SELECT</li>
